install required dep

--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,13 @@
 	"type": "project",
 	"license": "GPL-3.0",
 	"require": {
-		"bcosca/fatfree-core": "^3.8"
+		"bcosca/fatfree-core": "^3.8",
+		"robmorgan/phinx": "^0.13.4",
+		"vlucas/phpdotenv": "^5.5",
+		"zircote/swagger-php": "^4.7",
+		"spatie/array-to-xml": "^2.15",
+		"ikkez/f3-cortex": "^1.7",
+		"respect/validation": "^2.2",
+		"fakerphp/faker": "^1.21"
 	}
 }
