init config && db config

--- a/config.ini
+++ b/config.ini
@@ -2,3 +2,11 @@
 
 DEBUG=3
 UI=ui/
+
+; Locate some dependencies that Composer didn't know
+AUTOLOAD=app/|app/controllers/|app/models/|app/repositories/|app/view/
+
+
+; This is part of system cycle.
+[configs]
+app/config/database.ini=true
