--- a/config.ini
+++ b/config.ini
@@ -10,3 +10,4 @@ AUTOLOAD=app/|app/controllers/|app/models/|app/repositories/|app/view/
 ; This is part of system cycle.
 [configs]
 app/config/database.ini=true
+app/config/jwt.ini=true
