--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,12 @@
 		"spatie/array-to-xml": "^2.15",
 		"ikkez/f3-cortex": "^1.7",
 		"respect/validation": "^2.2",
-		"fakerphp/faker": "^1.21"
+		"fakerphp/faker": "^1.21",
+		"firebase/php-jwt": "^6.4",
+		"tcdent/php-restclient": "0.1.8.2",
+		"guzzlehttp/guzzle": "^7.5"
+	},
+	"require-dev": {
+		"phpunit/phpunit": "^9.5"
 	}
 }
